update context menu style

--- a/src/scss/components/main.scss
+++ b/src/scss/components/main.scss
@@ -1,4 +1,5 @@
 @import 'ExplorerFolderView';
 @import 'ExplorerFolderItem';
 @import 'ExplorerFileItem';
+@import 'ExplorerContextMenu';
 @import 'ExplorerContextMenuItem';
