--- a/src/scss/components/ExplorerContextMenu.scss
+++ b/src/scss/components/ExplorerContextMenu.scss
@@ -5,6 +5,7 @@
     background-color: #fff;
     display: none;
     border-radius: 1em;
+    visibility: hidden;
 
     &.open {
         max-height: 400px;
@@ -12,6 +13,7 @@
         flex-flow: column;
         padding: 10px 5px;
         box-shadow: -1px 2px 18px 2px rgba(0, 0, 0, .12);
+        visibility: visible;
     }
 
     &__item {
